--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@
     position:relative;
     text-align:center;
     padding:20% 0;
-    height:150px;
+    min-height:20vh;
     color:white;
     background-size:cover;
     width:100%;
@@ -98,7 +98,7 @@ main{
 
 .center{
     text-align:center;
-    padding:50px 0 30px 0;
+    padding:50px 0 50px 0;
 }
 
 .heading-2{
@@ -171,6 +171,14 @@ main{
     margin-bottom:10px;
 }
 
+.a5 p{
+    font-size:25px;
+}
+
+.a6{
+    text-align:center;
+}
+
 .heading-3{
     padding:0 30px 0 50px;
 }
@@ -233,8 +241,8 @@ main{
     padding: 0;
 }
 
-.flex-4{
-    display:flex;
+.d1 p{
+    color:rgb(213, 178, 159);
 }
 
 .footer p{
