--- a/stylesheet.css
+++ b/stylesheet.css
@@ -243,6 +243,22 @@ main{
 
 .d1 p{
     color:rgb(213, 178, 159);
+    text-align:center;
+    font-size:30px;
+}
+
+.center a{
+    font-size: 18px;
+    display: inline-block;
+    padding:0.5em 1em 0.3em;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    background-color: #ffcccc;
+    background-size: 10px 10px;
+    background-image: radial-gradient(#f8a7b1 15%, transparent 20%),
+    radial-gradient(#f8a7b1 15%, transparent 20%);
+    background-position: 0 0, 15px 15px;
 }
 
 .footer p{
