--- a/responsive.css
+++ b/responsive.css
@@ -1,60 +1,70 @@
-.pc-1 a{
-    font-size:35px;
-}
+@media screen and (max-width:480px){
+    .pc a{
+        font-size:15px;
+    }
 
-.pc-2 a{
-    font-size:35px;
-    padding:30px 70px 30px 0;
-}
+    .pc-1 a{
+        font-size:35px;
+    }
 
-h1{
-    font-size:20px;
-}
+    .pc-2 a{
+        font-size:35px;
+        padding:30px 70px 30px 0;
+    }
 
-.center{
-    padding:0;
-}
+    .head-main h1{
+        font-size:20px;
+    }
 
-.center-1{
-    padding:100px 0 50px 0;
-}
+    .center{
+        padding:0;
+    }
 
-.center-1 h1{
-    font-size:40px;
-}
+    .center-1{
+        padding:100px 0 50px 0;
+    }
 
-.center-2{
-    padding:100px 0 50px 0;
-}
+    .center-1 h1{
+        font-size:40px;
+    }
 
-.center-2 h1{
-    font-size:40px;
-}
+    .heading-2{
+        display:block;
+    }
 
-.a1 p{
-    font-size:28px;
-}
+    .center-2{
+        padding:100px 0 50px 0;
+    }
 
-.a1-1 p{
-    font-size:28px;
-}
+    .center-2 h1{
+        font-size:40px;
+    }
 
-.a2 p{
-    font-size:40px;
-}
+    .a1 p{
+        font-size:28px;
+    }
 
-.a3{
-    width:100%;
-}
+    .a1-1 p{
+        font-size:28px;
+    }
 
-.a4{
-    width:100%;
-}
+    .a2 p{
+        font-size:40px;
+    }
 
-.a5 p{
-    font-size:50px;
-}
+    .a3{
+        width:100%;
+    }
 
-.d1 p{
-    font-size:20px;
+    .a4{
+        width:100%;
+    }
+
+    .a5 p{
+        font-size:50px;
+    }
+
+    .d1 p{
+        font-size:20px;
+    }
 }
